fix: change body overflow property to prevent horizontal scrolling

--- a/team.css
+++ b/team.css
@@ -7,7 +7,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #FFFAEA;
-    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .main-container {
